
[package]
name = "unzrip"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "zip-parser" ]


[dependencies]
zip-parser = { path = "zip-parser" }

# tools
anyhow = "1"
argh = "0.1"
bstr = "1"

# fast
rayon = "1"
memmap2 = "0.5"
